bugfixing, switching left and right kind of works, did not manage truncation of date

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,10 @@
     padding: 0;
 }
 
+.placeholder {
+    height: 20px;
+}
+
 body {
     background-image: url(/patterns/so-white.png);
     /* background-image: url(/patterns/white-waves.png); */
@@ -48,7 +52,7 @@ h1 {
 /* ////////////////////////// INPUTFIELDS ////////////////////////// */
 
 #inputfields {
-    /* opacity: 0.6; */
+    opacity: 0.9;
     background-color: white;
     grid-column: 1 / 4;
     height: 210px;
@@ -101,6 +105,7 @@ input:focus {
 button {
     color: white;
     background-color: #c62828;
+    opacity: 0.9;
     width: 150px;
     height: 50px;
     font-size: 30px;
@@ -124,7 +129,7 @@ button:focus {
     outline: none;
 }
 
-#more-button {
+#get-more-images {
     grid-column: 2 / 3;
 }
 
@@ -140,7 +145,7 @@ button:focus {
     text-align: center;
 }
 
-img {
+.cover {
     width: 100%;
     height: 88%;
     padding: 1%;
@@ -162,6 +167,8 @@ img {
     /* background-image: url(/patterns/so-white.png); */
     background: white;
     position: fixed;
+    /* height: 100vh; */
+    overflow: scroll;
     top: 0;
     bottom: 0;
     right: 4%;
@@ -172,6 +179,29 @@ img {
     grid-template-rows: 4fr 1fr;
 }
 
+#modal-upper-left {
+    width: 100%;
+    height: 100%;
+}
+
+#img-modal {
+    width: 100%;
+    height: 100%;
+    padding: 3%;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+#left {
+    font-family: "SpriteGraffiti-Shadow", "Baloo Tamma 2", cursive;
+    font-size: 40px;
+    cursor: pointer;
+    position: absolute;
+    top: 60%;
+    /* transform: translateX(-1px); */
+    z-index: 5;
+}
+
 #image-info {
     margin-left: 70px;
 }
@@ -179,15 +209,6 @@ img {
 .flexbox-modal {
     display: flex;
     justify-content: flex-start;
-}
-
-.img-title-modal {
-    /* width: 100%; */
-    /* height: 100%; */
-    /* padding: 1%; */
-    /* object-fit: contain; */
-    /* object-fit: cover; */
-    object-fit: scale-down;
 }
 
 .comments {
@@ -201,6 +222,35 @@ img {
     position: absolute;
     top: 5px;
     right: 5px;
+}
+
+#x:hover {
+    color: grey;
+}
+
+#x:active,
+#right:active {
+    transform: translateY(1px);
+}
+
+#right {
+    font-family: "SpriteGraffiti-Shadow", "Baloo Tamma 2", cursive;
+    font-size: 40px;
+    cursor: pointer;
+    position: absolute;
+    top: 60%;
+    right: 5px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: grey;
+    /* color: blue; */
+    /* text-decoration: underline blue; */
 }
 
 h2 {
@@ -253,9 +303,6 @@ h2 {
 
 #props-button:focus {
     outline: none;
-}
-
-.props-container {
 }
 
 .props-commenter {
